--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 altgraph==0.17.3
 keyboard==0.13.5
 pefile==2023.2.7
+Pillow==9.5.0
 pyinstaller==5.10.0
 pyinstaller-hooks-contrib==2023.2
+pystray==0.19.4
 pywin32==306
 pywin32-ctypes==0.2.0
+six==1.16.0
